--- a/app/src/main/res/layout/fragment_create_account.xml
+++ b/app/src/main/res/layout/fragment_create_account.xml
@@ -1,74 +1,61 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
 
     </data>
 
-    <RelativeLayout
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".CreateAccount">
+        android:gravity="center_horizontal"
+        android:orientation="vertical"
+        android:padding="@dimen/common_padding_default"
+        tools:context=".MainActivity">
 
-
-        <TextView
-            android:id="@+id/createAccounTitle"
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/tilName"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:gravity="center"
-            android:layout_alignParentTop="true"
-            android:text="@string/crear_cuenta"
-            android:textSize="30sp" />
+            app:helperText="Nombre"
+            app:helperTextTextAppearance="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox" />
 
-        <TextView
-            android:id="@+id/setMailText"
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/userName"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/createAccounTitle"
-            android:layout_centerVertical="true"
-            android:layout_marginTop="237dp"
-            android:gravity="center"
-            android:text="@string/mail"
-            android:textSize="40sp" />
+            android:inputType="textPersonName" />
 
-        <EditText
-            android:id="@+id/setMail"
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:layout_below="@+id/setMailText"
-            android:gravity="center"
-            android:hint="@string/ingreseMail" />
-
-        <TextView
-            android:id="@+id/setPasswordText"
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/tilMail"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@id/setMail"
-            android:layout_centerVertical="true"
-            android:layout_marginTop="30dp"
-            android:gravity="center"
-            android:text="@string/crearPass"
-            android:textSize="40sp" />
+            app:helperText="Correo electronico"
+            app:helperTextTextAppearance="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox" />
 
-        <EditText
-            android:id="@+id/setPassword"
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:layout_below="@id/setPasswordText"
-            android:hint="@string/ingreseContraseña"
-            android:gravity="center" />
-
-        <Button
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/userEmail"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@drawable/square_button_background"
-            android:layout_alignParentBottom="true"
-            android:text="@string/crear_cuenta"
-            android:textSize="30sp"
+            android:inputType="textEmailAddress" />
 
-            />
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/tilBirthDay"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:helperText="Fecha de nacimiento"
+            app:helperTextTextAppearance="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox" />
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/userBirthDay"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:inputType="date" />
 
 
-    </RelativeLayout>
+    </LinearLayout>
+
+
 </layout>
