--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -9,7 +9,7 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".Login">
+        tools:context=".UI.Login">
 
 
         <TextView
@@ -29,7 +29,7 @@
             android:layout_centerVertical="true"
             android:layout_marginTop="237dp"
             android:gravity="center"
-            android:text="@string/mail"
+            android:text="@string/user"
             android:textSize="40sp" />
 
         <EditText
@@ -38,7 +38,7 @@
             android:layout_height="50dp"
             android:layout_below="@+id/enterMailText"
             android:gravity="center"
-            android:hint="@string/ingreseMail" />
+            android:hint="@string/ingrese_su_usuario" />
 
         <TextView
             android:id="@+id/enterPasswordText"
