--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/home2"
-        android:name="bootcamp.cl.proyecto_agenda.Home"
+        android:name="bootcamp.cl.proyecto_agenda.UI.Home"
         android:label="Home"
         tools:layout="@layout/fragment_home">
         <action
@@ -19,12 +19,12 @@
     </fragment>
     <fragment
         android:id="@+id/createAccount2"
-        android:name="bootcamp.cl.proyecto_agenda.CreateAccount"
+        android:name="bootcamp.cl.proyecto_agenda.UI.CreateAccount"
         android:label="CreateAccount"
         tools:layout="@layout/fragment_create_account"/>
     <fragment
         android:id="@+id/login2"
-        android:name="bootcamp.cl.proyecto_agenda.Login"
+        android:name="bootcamp.cl.proyecto_agenda.UI.Login"
         android:label="Login"
         tools:layout="@layout/fragment_login"/>
 </navigation>
