--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -21,16 +21,19 @@
         android:id="@+id/medsButton"
         android:layout_width="200dp"
         android:layout_height="200dp"
-        app:layout_constraintTop_toBottomOf="@id/MainFragmentTitle"
+        android:src="@drawable/red_cross_"
+        android:scaleType="fitXY"
         app:layout_constraintStart_toStartOf="parent"
-       />
+        app:layout_constraintTop_toBottomOf="@id/MainFragmentTitle" />
 
     <ImageButton
         android:id="@+id/appointments"
         android:layout_width="200dp"
         android:layout_height="200dp"
         app:layout_constraintTop_toBottomOf="@id/MainFragmentTitle"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        app:layout_constraintEnd_toEndOf="parent"
+        android:src="@drawable/appointments"
+        android:scaleType="fitXY"/>
 
     <ImageButton
         android:id="@+id/testAppointments"
