--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -40,16 +40,18 @@
         android:layout_width="200dp"
         android:layout_height="200dp"
         app:layout_constraintTop_toBottomOf="@+id/medsButton"
-        app:layout_constraintStart_toStartOf="parent"/>
+        app:layout_constraintStart_toStartOf="parent"
+        android:src="@drawable/horasmedicas"
+        android:scaleType="fitXY"/>
 
     <ImageButton
         android:id="@+id/prescriptions"
         android:layout_width="200dp"
         android:layout_height="200dp"
         app:layout_constraintTop_toBottomOf="@+id/appointments"
-        app:layout_constraintEnd_toEndOf="parent"/>
-
-
+        app:layout_constraintEnd_toEndOf="parent"
+        android:src="@drawable/indicaciones"
+        android:scaleType="fitXY"/>
 
     <Button
         android:id="@+id/addObject"
