--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,17 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
 
     </data>
 
-    <RelativeLayout
-
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".MainActivity">
+        android:orientation="vertical">
 
         <TextView
             android:id="@+id/title"
@@ -23,13 +21,42 @@
             android:gravity="center"
             android:onClick="onButtonClick"/>
 
+
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/tilSingInUser"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="200dp"
+                app:helperText="@string/user"
+               android:layout_marginLeft="10dp"
+                app:helperTextTextAppearance="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox" />
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/singInUserName"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:inputType="textEmailAddress" />
+
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/tilPassword"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                app:helperText="@string/contrase_a"
+                app:helperTextTextAppearance="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox" />
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/SingInUserPassword"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:inputType="textEmailAddress" />
+
         <Button
             android:id="@+id/btnLogin"
             android:layout_width="240dp"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/title"
-            android:layout_centerInParent="true"
-            android:layout_marginTop="314dp"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="16dp"
             android:gravity="center"
             android:text="@string/login"
             android:textSize="30sp"></Button>
@@ -38,20 +65,12 @@
             android:id="@+id/btnCreateAccount"
             android:layout_width="240dp"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/btnLogin"
-            android:layout_centerInParent="true"
+            android:layout_gravity="center_horizontal"
             android:text="@string/create_account"
-            android:textSize="30sp"></Button>
-
-        <Button
-            android:id="@+id/aboutUs"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Sobre nosotros"
-            android:textSize="15sp"
-            android:layout_alignParentBottom="true"
-            android:background="@drawable/square_button_background"></Button>
+            android:textSize="30sp"
+            ></Button>
 
 
-    </RelativeLayout>
+
+    </LinearLayout>
 </layout>
