--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -2,13 +2,7 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <data>
-
-    </data>
-
     <LinearLayout
-
-
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
@@ -20,7 +14,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="300dp"
                 app:helperText="@string/user"
-               android:layout_marginLeft="10dp"
+               android:layout_marginStart="10dp"
                 app:helperTextTextAppearance="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox" />
 
             <com.google.android.material.textfield.TextInputEditText
@@ -33,7 +27,7 @@
                 android:id="@+id/tilPassword"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="10dp"
+                android:layout_marginStart="10dp"
                 app:helperText="@string/contrase_a"
                 app:helperTextTextAppearance="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox" />
 
@@ -41,28 +35,25 @@
                 android:id="@+id/SingInUserPassword"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:inputType="textEmailAddress" />
+                android:inputType="numberPassword" />
 
         <Button
             android:id="@+id/btnLogin"
-            android:layout_width="240dp"
-            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            android:layout_height="60dp"
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="16dp"
             android:gravity="center"
             android:text="@string/login"
-            android:textSize="30sp"></Button>
+            android:textSize="30sp" />
 
         <Button
             android:id="@+id/btnCreateAccount"
-            android:layout_width="240dp"
-            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            android:layout_height="60dp"
             android:layout_gravity="center_horizontal"
             android:text="@string/create_account"
-            android:textSize="30sp"
-            ></Button>
-
-
+            android:textSize="30sp" />
 
     </LinearLayout>
 </layout>
