--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -1,71 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".UI.Main_Fragment">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools">
 
-    <TextView
-        android:id="@+id/MainFragmentTitle"
+    <data>
+
+    </data>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Agenda Medica"
-        android:textSize="40sp"
-        android:gravity="center"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        android:layout_height="match_parent">
 
-    <ImageButton
-        android:id="@+id/medsButton"
-        android:layout_width="200dp"
-        android:layout_height="200dp"
-        android:src="@drawable/red_cross_"
-        android:scaleType="fitXY"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/MainFragmentTitle" />
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recyclerMain"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
 
-    <ImageButton
-        android:id="@+id/appointments"
-        android:layout_width="200dp"
-        android:layout_height="200dp"
-        app:layout_constraintTop_toBottomOf="@id/MainFragmentTitle"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:src="@drawable/appointments"
-        android:scaleType="fitXY"/>
-
-    <ImageButton
-        android:id="@+id/testAppointments"
-        android:layout_width="200dp"
-        android:layout_height="200dp"
-        app:layout_constraintTop_toBottomOf="@+id/medsButton"
-        app:layout_constraintStart_toStartOf="parent"
-        android:src="@drawable/horasmedicas"
-        android:scaleType="fitXY"/>
-
-    <ImageButton
-        android:id="@+id/prescriptions"
-        android:layout_width="200dp"
-        android:layout_height="200dp"
-        app:layout_constraintTop_toBottomOf="@+id/appointments"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:src="@drawable/indicaciones"
-        android:scaleType="fitXY"/>
-
-    <Button
-        android:id="@+id/addObject"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Agregar"
-        android:textSize="40sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:gravity="center"
-        android:background="@drawable/square_button_background"/>
-
-
-
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</layout>
