--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/home2"
-        android:name="bootcamp.cl.proyecto_agenda.UI.Home"
+        android:name="bootcamp.cl.proyecto_agenda.UI.Fragments.Home"
         android:label="Home"
         tools:layout="@layout/fragment_home">
         <action
@@ -19,7 +19,7 @@
     </fragment>
     <fragment
         android:id="@+id/createAccount2"
-        android:name="bootcamp.cl.proyecto_agenda.UI.CreateAccount"
+        android:name="bootcamp.cl.proyecto_agenda.UI.Fragments.CreateAccount"
         android:label="CreateAccount"
         tools:layout="@layout/fragment_create_account">
         <action
@@ -28,7 +28,7 @@
     </fragment>
     <fragment
         android:id="@+id/main_Fragment2"
-        android:name="bootcamp.cl.proyecto_agenda.UI.Main_Fragment"
+        android:name="bootcamp.cl.proyecto_agenda.UI.Fragments.Main_Fragment"
         android:label="fragment_main"
         tools:layout="@layout/fragment_main" />
 </navigation>
