--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -1,32 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
-    <data>
-
-    </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@drawable/fondolayout">
 
+        <ImageButton
+            android:id="@+id/btnLogOut"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/_logout_24"
+            android:focusable="true"
+            android:layout_margin="10dp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            />
+
         <GridLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-           app:layout_constraintEnd_toEndOf="parent"
-            android:padding="@dimen/common_padding_default"
             android:columnCount="2"
-            android:rowCount="2">
+            android:padding="@dimen/common_padding_default"
+            android:rowCount="2"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent">
 
             <androidx.cardview.widget.CardView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                app:cardCornerRadius="8dp"
-                android:elevation="6dp">
+                android:elevation="6dp"
+                app:cardCornerRadius="8dp">
 
                 <LinearLayout
                     android:layout_width="wrap_content"
@@ -36,49 +44,18 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent"
+                        android:layout_gravity="center"
                         android:text="@string/medicamentos"
-                        android:textStyle="bold"
                         android:textSize="20dp"
-                        android:layout_gravity="center"/>
+                        android:textStyle="bold" />
 
-                <ImageButton
-                    android:id="@+id/btnMeds"
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:src="@drawable/_medication_24"
-                    android:scaleType="fitCenter"
-                    android:focusable="true"/>
-
-                </LinearLayout>
-
-            </androidx.cardview.widget.CardView>
-
-            <androidx.cardview.widget.CardView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                app:cardCornerRadius="8dp"
-                android:elevation="6dp">
-
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical">
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:text="@string/citas_medicas"
-                    android:textStyle="bold"
-                    android:textSize="20dp"
-                    android:layout_gravity="center"/>
-
-                <ImageButton
-                    android:id="@+id/btnAppointments"
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:src="@drawable/_medical_services_24"
-                    android:scaleType="fitCenter"
-                    android:focusable="true"/>
+                    <ImageButton
+                        android:id="@+id/btnMeds"
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:focusable="true"
+                        android:scaleType="fitCenter"
+                        android:src="@drawable/_medication_24" />
 
                 </LinearLayout>
 
@@ -87,29 +64,30 @@
             <androidx.cardview.widget.CardView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                app:cardCornerRadius="8dp"
-                android:elevation="6dp">
+                android:elevation="6dp"
+                app:cardCornerRadius="8dp">
 
                 <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:orientation="vertical">
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:text="@string/citas_a_examenes"
-                    android:textStyle="bold"
-                    android:textSize="20dp"
-                    android:layout_gravity="center"/>
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:layout_gravity="center"
+                        android:text="@string/citas_medicas"
+                        android:textSize="20dp"
+                        android:textStyle="bold" />
 
-                <ImageButton
-                    android:id="@+id/btnTestAppointments"
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:src="@drawable/_medical_test_24"
-                    android:scaleType="fitCenter"
-                    android:focusable="true"/>
+                    <ImageButton
+                        android:id="@+id/btnAppointments"
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:focusable="true"
+                        android:scaleType="fitCenter"
+                        android:src="@drawable/_medical_services_24" />
+
                 </LinearLayout>
 
             </androidx.cardview.widget.CardView>
@@ -117,29 +95,59 @@
             <androidx.cardview.widget.CardView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                app:cardCornerRadius="8dp"
-                android:elevation="6dp">
+                android:elevation="6dp"
+                app:cardCornerRadius="8dp">
 
                 <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:orientation="vertical">
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:text="@string/indicaciones"
-                    android:textStyle="bold"
-                    android:textSize="20dp"
-                    android:layout_gravity="center"/>
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:layout_gravity="center"
+                        android:text="@string/citas_a_examenes"
+                        android:textSize="20dp"
+                        android:textStyle="bold" />
 
-                <ImageButton
-                    android:id="@+id/btnPrescriptions"
+                    <ImageButton
+                        android:id="@+id/btnTestAppointments"
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:focusable="true"
+                        android:scaleType="fitCenter"
+                        android:src="@drawable/_medical_test_24" />
+                </LinearLayout>
+
+            </androidx.cardview.widget.CardView>
+
+            <androidx.cardview.widget.CardView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:elevation="6dp"
+                app:cardCornerRadius="8dp">
+
+                <LinearLayout
                     android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:src="@drawable/_note_add_24"
-                    android:scaleType="fitCenter"
-                    android:focusable="true"/>
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:layout_gravity="center"
+                        android:text="@string/indicaciones"
+                        android:textSize="20dp"
+                        android:textStyle="bold" />
+
+                    <ImageButton
+                        android:id="@+id/btnPrescriptions"
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:focusable="true"
+                        android:scaleType="fitCenter"
+                        android:src="@drawable/_note_add_24" />
 
                 </LinearLayout>
 
