--- a/app/src/main/res/layout/fragment_meds.xml
+++ b/app/src/main/res/layout/fragment_meds.xml
@@ -14,6 +14,7 @@
             android:id="@+id/recycleMeds"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
