--- a/app/src/main/res/layout/fragment_new_med.xml
+++ b/app/src/main/res/layout/fragment_new_med.xml
@@ -7,9 +7,9 @@
 
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="bottom"
         android:orientation="vertical"
-        android:padding="@dimen/common_padding_default">
+        android:padding="@dimen/common_padding_default"
+        android:background="@drawable/fondolayout">
 
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/tilMedsName"
@@ -32,19 +32,18 @@
             app:helperTextTextAppearance="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox" />
 
         <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/userEmail"
+            android:id="@+id/newMedIndication"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="80dp"
             android:inputType="textNoSuggestions" />
 
         <Button
+            android:id="@+id/addNewMed"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Agregar"
+            android:text="@string/agregar"
             android:textStyle="bold"
             android:textSize="30dp"/>
-
-
 
     </LinearLayout>
 </layout>
