--- a/app/src/main/res/layout/item_meds_layout.xml
+++ b/app/src/main/res/layout/item_meds_layout.xml
@@ -9,16 +9,18 @@
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-
         android:clickable="true"
         android:focusable="true"
         app:cardCornerRadius="15dp"
+        android:layout_margin="4dp"
+        android:layout_marginBottom="4dp"
         android:foreground="?attr/selectableItemBackground">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:background="@color/greenLayout">
 
             <TextView
                 android:id="@+id/MedName"
@@ -27,6 +29,7 @@
                 android:padding="@dimen/common_padding_2"
                 android:textSize="35dp"
                 android:textStyle="bold"
+                android:textColor="@color/white"
                 android:text="@string/nombre_medicamento"/>
 
             <TextView
@@ -35,9 +38,8 @@
                 android:layout_height="wrap_content"
                 android:padding="@dimen/common_padding_2"
                 android:textSize="25dp"
+                android:textColor="@color/white"
                 android:text="@string/indication_example"/>
-
-
 
 
         </LinearLayout>
