base de datos implementada ok, falta mostrar los elementos en el recycler

--- a/app/src/main/res/layout/fragment_new_med.xml
+++ b/app/src/main/res/layout/fragment_new_med.xml
@@ -38,7 +38,7 @@
             android:inputType="textNoSuggestions" />
 
         <Button
-            android:id="@+id/addNewMed"
+            android:id="@+id/btnAddNewMed"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/agregar"
