--- a/app/src/main/res/drawable/_medical_test_24.xml
+++ b/app/src/main/res/drawable/_medical_test_24.xml
@@ -1,7 +1,7 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
     android:width="140dp"
     android:height="140dp"
-    android:tint="#331365B6"
+    android:tint="#1365B6"
     android:viewportWidth="24"
     android:viewportHeight="24">
     <path
