--- a/app/src/main/res/layout/fragment_doc_indications.xml
+++ b/app/src/main/res/layout/fragment_doc_indications.xml
@@ -17,14 +17,16 @@
                 android:id="@+id/recycleDocIndication"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
-                app:spanCount="2"
-                android:focusable="true"
                 android:clickable="true"
+                android:focusable="true"
+                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                 app:layout_constraintBottom_toTopOf="@+id/btnAddDocIndication"
                 app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0.0"
+                app:spanCount="2"
                 tools:listitem="@layout/item_doc_indication" />
 
             <Button
