--- a/app/src/main/res/layout/fragment_new_doc_indication.xml
+++ b/app/src/main/res/layout/fragment_new_doc_indication.xml
@@ -1,14 +1,68 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".UI.Fragments.NewDocIndicationFragment">
+<layout xmlns:tools="http://schemas.android.com/tools"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+
+    <LinearLayout
+
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:padding="@dimen/common_padding_default"
+        android:background="@drawable/fondolayout"
+        tools:ignore="ExtraText">
 
-</FrameLayout>
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/tilDiagnostic"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:helperText="@string/Diagnostico"
+            app:helperTextTextAppearance="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox" />
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/newDiagnostic"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:inputType="textNoSuggestions" />
+
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/tilIndication"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:helperText="@string/indicaciones"
+            app:helperTextTextAppearance="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox" />
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/newIndication"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:inputType="textNoSuggestions" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Agregar foto"
+            android:layout_gravity="center"
+            android:layout_margin="@dimen/common_padding_2"/>
+
+        <ImageView
+            android:id="@+id/IndicationImage"
+            android:layout_width="250dp"
+            android:layout_height="350dp"
+            android:src="@drawable/baseline_photo_camera_24"
+            android:background="@color/grey_background"
+            android:layout_gravity="center"
+            android:clickable="true"
+            android:focusable="true"
+            android:layout_margin="@dimen/common_padding_2"/>
+
+        <Button
+            android:id="@+id/btnAddNewDocAppointment"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/agregar"
+            android:textStyle="bold"
+            android:textSize="30dp"/>
+
+    </LinearLayout>
+</layout>
